# rules_tectonic

./: .bazelrc  BUILD.bazel  README.md
examples/: BUILD.bazel  smoke.tex
examples/sectioned/: BUILD.bazel  body.tex  intro.tex  preamble.tex
tectonic/: BUILD.bazel  defs.bzl  extensions.bzl  toolchains.bzl
tectonic/private/: BUILD.bazel  known_versions.bzl  tectonic_pdf.bzl  tex_paper.bzl  tex_section.bzl
