load(
    "@rules_tectonic//tectonic:defs.bzl",
    "tex_paper",
    "tex_section",
)

# Smoke test for the v0.0.2 `tex_section` + `tex_paper` rules.
# Two sections in their own files, composed into a single PDF.
#
#   bazel build //examples/sectioned:sectioned_paper
#
# produces `sectioned_paper.pdf`.

tex_section(
    name = "intro",
    src = "intro.tex",
    section_label = "sec:intro",
)

tex_section(
    name = "body",
    src = "body.tex",
    section_label = "sec:body",
)

tex_paper(
    name = "sectioned_paper",
    preamble = "preamble.tex",
    sections = [
        ":intro",
        ":body",
    ],
)
